[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "aggv3_igv"
version = "0.1.0"
description = "A tool to create IGV URLs for participants and family members in the NGRL."
readme = "README.md"
authors = [
  {name = "Alex Blakes"}
]
license = {text = "MIT"}

[project.dependencies]
python = "3.13.*"
numpy = ">=2.4.3,<3"
pandas = "3.*"
ruff = ">=0.15.9,<0.16"
boto3 = ">=1.35"
aggv3_igv = { path = ".", editable = true } # noqa

[project.scripts]
aggv3_igv = "aggv3_igv.cli:main"

# [tool.pixi.pypi-dependencies]
