[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "aggv3_igv"
version = "0.1.0"
description = "A tool to create IGV URLs for participants and family members in the NGRL."
readme = "README.md"
authors = [
  {name = "Alex Blakes"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pandas>=2",
  "numpy>=1.24",
  "boto3>=1.35",
]

[project.scripts]
aggv3_igv = "aggv3_igv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aggv3_igv = ["config.toml"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]
conda-pypi-map = { conda-forge = "https://raw.githubusercontent.com/prefix-dev/parselmouth/refs/heads/main/files/compressed_mapping.json", bioconda = "https://raw.githubusercontent.com/prefix-dev/parselmouth/refs/heads/main/files/compressed_mapping.json" }
exclude-newer = "7 days"

[tool.pixi.dependencies]
python = "3.13.*"
numpy = ">=2.4.3,<3"
pandas = "3.*"
ipykernel = ">=7.2.0,<8"
pip = ">=26.0.1,<27"
ruff = ">=0.15.9,<0.16"

[tool.pixi.pypi-dependencies]
pandas-checks = '>=2,<3'
aggv3_igv = { path = ".", editable = true } # noqa

[tool.pixi.pypi-exclude-newer]
aggv3_igv = "1 second"
pandas-checks = "1 second"

[tool.pixi.tasks]
ruff_lint = "ruff check --fix"
ruff_format = "ruff format"
smk_format = "snakefmt Snakefile scripts/"
fmt = { depends-on = ["ruff_lint", "ruff_format", "smk_format"] }
